--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\asanchez\\AppData\\Roaming\\NetBeans\\7.4\\config\\GlassFishEE6\\Properties\\gfv31840157099.properties
+deploy.ant.properties.file=C:\\Users\\asanchez\\AppData\\Roaming\\NetBeans\\7.3.1\\config\\GlassFishEE6\\Properties\\gfv32120448257.properties
+file.reference.mysql-connector-java-5.1.24-bin.jar=M:\\Spitter\\mysql-connector-java-5.1.24-bin.jar
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/asanchez/AppData/Roaming/NetBeans/7.4/config/GF_4.0/domain1
+j2ee.server.domain=C:/Users/asanchez/AppData/Roaming/NetBeans/7.3.1/config/GF3/domain1
 j2ee.server.home=C:/Program Files/glassfish-4.0/glassfish
 j2ee.server.instance=[C:\\Program Files\\glassfish-4.0\\glassfish;C:\\Program Files\\glassfish-4.0\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=C:/Program Files/glassfish-4.0
-user.properties.file=C:\\Users\\asanchez\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
+user.properties.file=C:\\Users\\asanchez\\AppData\\Roaming\\NetBeans\\7.3.1\\build.properties
