--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,5 @@
 deploy.ant.properties.file=C:\\Users\\asanchez\\AppData\\Roaming\\NetBeans\\7.3.1\\config\\GlassFishEE6\\Properties\\gfv32120448257.properties
+file.reference.mysql-connector-java-5.1.18-bin.jar=M:\\Spitter\\mysql-connector-java-5.1.18-bin.jar
 file.reference.mysql-connector-java-5.1.24-bin.jar=M:\\Spitter\\mysql-connector-java-5.1.24-bin.jar
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/Users/asanchez/AppData/Roaming/NetBeans/7.3.1/config/GF3/domain1
